--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,22 @@ h1{
     margin-top: 0;
 }
 
-div{
+/* div{
     background-color: #E4F9F5;
+} */
+
+.top-container{
+    background-color: #E4F9F5;
+}
+
+.middle-container{
+    height: 200px;
+    width: 200px;
+    background-color: red;
+}
+
+.bottom-container{
+    height: 200px;
+    width: 200px;
+    background-color: blue;
 }
