--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,24 @@
 body{
     margin: 0;
+    text-align: center;
 }
 
 h1{
     margin-top: 0;
+    /* width:10%; */
+
+    /* top and bottom: 0 margin
+        box is horizontally centered */
+    /* margin:auto; */ 
+
+    /* top and bottom: 0 margin
+        box is horizontally centered */
+    /* margin: 0 auto; */
+
+    /* top: 0 margin
+        bottom: 0 margin
+        box is horizontally centered */
+    /* margin: 0 auto 0 auto; */
 }
 
 /* div{
@@ -12,6 +27,8 @@ h1{
 
 .top-container{
     background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
 }
 
 .middle-container{
@@ -24,4 +41,20 @@ h1{
     height: 200px;
     width: 200px;
     background-color: blue;
+}
+
+.pro{
+    text-decoration: underline;
+}
+
+.top-cloud{
+    position:absolute;
+    right:400px;
+    top:50px;
+}
+
+.bottom-cloud{
+    position:absolute;
+    left:400px;
+    bottom:300px;
 }
