--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
 body{
     margin: 0;
     text-align: center;
+    /* font-family: verdana, sans-serif; */
+    font-family: 'Merriweather', serif;
 }
 
 h1{
     margin-top: 0;
+    font-family: 'Sacramento', cursive;
     /* width:10%; */
 
     /* top and bottom: 0 margin
@@ -19,6 +22,13 @@ h1{
         bottom: 0 margin
         box is horizontally centered */
     /* margin: 0 auto 0 auto; */
+}
+h2{
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3{
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* div{
