--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,15 @@ body{
     text-align: center;
     /* font-family: verdana, sans-serif; */
     font-family: 'Merriweather', serif;
+    /* font-size: 200% ; */
 }
 
 h1{
-    margin-top: 0;
+    /* rem: to ignore font-size of parent */
+    font-size: 5.625rem;
+    /* 100% = 16px, 90px=562.5% */
+    /* 1em = 16px = 100% */
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
     /* width:10%; */
 
@@ -25,6 +30,7 @@ h1{
 }
 h2{
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
 }
 
 h3{
@@ -47,12 +53,12 @@ h3{
 
 .top-cloud{
     position:absolute;
-    right:400px;
+    right:300px;
     top:50px;
 }
 
 .bottom-cloud{
     position:absolute;
-    left:400px;
+    left:300px;
     bottom:300px;
 }
