--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,8 @@ h1{
     /* 1em = 16px = 100% */
     margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
+    color: #66BFBF;
+    /* line-height: 2; */
     /* width:10%; */
 
     /* top and bottom: 0 margin
@@ -31,10 +33,17 @@ h1{
 h2{
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
+    color: #66BFBF;
+    font-weight: normal;
 }
 
 h3{
     font-family: 'Montserrat', sans-serif;
+    color: #11999E;
+}
+
+a{
+    color: #11999E;
 }
 
 /* div{
