--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,14 @@ a{
     padding-top: 100px;
 }
 
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+}
+
 .pro{
     text-decoration: underline;
 }
@@ -71,3 +79,23 @@ a{
     left:300px;
     bottom:300px;
 }
+
+.code-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.php-img {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+/* .code-skill-desc{
+    clear: left;
+}
+
+.php-skill-desc{
+    clear: right;
+} */
