--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body{
     /* font-family: verdana, sans-serif; */
     font-family: 'Merriweather', serif;
     /* font-size: 200% ; */
+    color: #40514E;
 }
 
 h1{
@@ -35,6 +36,7 @@ h2{
     font-size: 2.5rem;
     color: #66BFBF;
     font-weight: normal;
+    padding-bottom: 10px;
 }
 
 h3{
@@ -44,39 +46,87 @@ h3{
 
 a{
     color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+    /* padding: 10px; */
+}
+
+a:hover{
+    color: #EAF6F6;
 }
 
 /* div{
     background-color: #E4F9F5;
 } */
 
+p{
+    line-height: 2;
+}
+
+hr {
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    /* border-style: none;
+    border-top-style: dotted;
+    border-color: #EAF6F6;
+    border-width: 6px; */
+    width:4%;
+    margin: 100px auto;
+}
+
 .top-container{
-    background-color: #E4F9F5;
+    background-color: #EAF6F6;
     position: relative;
     padding-top: 100px;
 }
 
+.middle-container{
+    margin: 100px 0;
+}
+
+.bottom-container{
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
+    /* margin: 100px 0 0; */
+}
 
 .skill-row {
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
-    line-height: 2;
 }
 
 .pro{
     text-decoration: underline;
 }
 
+.intro{
+    width: 30%;
+    margin: auto;
+}
+
+.contact-message{
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+.copyright{
+    /* margin: 0; */
+    font-size: 0.75rem;
+    color: #EAF6F6;
+    padding: 20px 0;
+}
+
 .top-cloud{
     position:absolute;
     right:300px;
-    top:50px;
+    top:40px;
 }
 
 .bottom-cloud{
     position:absolute;
-    left:300px;
+    left:250px;
     bottom:300px;
 }
 
@@ -99,3 +149,39 @@ a{
 .php-skill-desc{
     clear: right;
 } */
+
+
+.btn {
+    background: #11CDD4;
+    background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+    background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    padding: 10px 20px;
+    text-shadow: 1px 1px 20px #000000;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+}
+
+.btn:hover {
+    border: solid #FF5959 0px;
+    background: #30E3CB;
+    background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AC);
+    background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AC);
+    background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AC);
+    background-image: -o-linear-gradient(top, #30E3CB, #2BC4AC);
+    background-image: linear-gradient(to bottom, #30E3CB, #2BC4AC);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    text-decoration: none;
+}
